@@ -92,6 +92,7 @@ By DamienMcKenna: Properly formatted all comments in the main module file.
 #2546906 by DamienMcKenna: If a default display is not available for certain
   Panelizer admin paths, display an appropriate error message instead of
   throwing a 404 page.
+By DamienMcKenna: Minor refactoring to node revision tests.
 
 
 Panelizer 7.x-3.2-beta1, 2015-02-02
